# linux-daemon-template

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  ReadMe.md  createModule.sh  run.sh
DaemonTemplate/: CMakeLists.txt
DaemonTemplate/src/: CMakeLists.txt  Daemon.cpp  main.cpp
DaemonTemplate/src/ExampleModule/: CMakeLists.txt  ExampleModule.cpp  ExampleModule.hpp
DaemonTemplate/src/Logging/: Logger.cpp  Logger.h  ServerLoggerFileHandler.cpp  ServerLoggerFileHandler.hpp
DaemonTemplate/src/SignalHandler/: KillSignalHandler.hpp
DaemonTemplate/tests/: CMakeLists.txt
DaemonTemplate/tests/src/ExampleModule/: ExampleModule.cpp
daemon/: CMakeLists.txt  daemon.service
daemon/main/: CMakeLists.txt  main.cpp
daemon/main/Logging/: Logger.cpp
daemon/main/SignalHandler/: KillSignalHandler.cpp
daemon/src/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  main.cpp
daemon/src/ArgumentParser/: ArgumentParser.cpp  ArgumentParser.hpp
daemon/src/ExampleModule/: ExampleModule.hpp
daemon/src/Logging/: Logger.hpp  LoggingProcessor.cpp  LoggingProcessor.hpp
daemon/src/SignalHandler/: KillSignalHandler.hpp
daemon/tests/: CMakeLists.txt
daemon/tests/src/ArgumentParserTest/: ArgumentParserTest.cpp
daemon/tests/src/ExampleModule/: ExampleModule.cpp
