cmake_minimum_required(VERSION 3.10)
MESSAGE("PROJECT_NAME = " ${PROJECT_NAME})

SET(PROJECT_DIRECTORY ${PROJECT_SOURCE_DIR}/${PROJECT_NAME})
MESSAGE("PROJECT_DIRECTORY = " ${PROJECT_DIRECTORY})

set(CMAKE_INSTALL_PREFIX ${PROJECT_DIRECTORY})
MESSAGE("CMAKE_INSTALL_PREFIX = " ${CMAKE_INSTALL_PREFIX})

set(DIVISIBLE_INSTALL_INC_DIR ${PROJECT_DIRECTORY}/include)
MESSAGE("DIVISIBLE_INSTALL_INC_DIR = " ${DIVISIBLE_INSTALL_INC_DIR})

set(DIVISIBLE_INSTALL_LIB_DIR ${PROJECT_DIRECTORY}/lib)
MESSAGE("DIVISIBLE_INSTALL_LIB_DIR = " ${DIVISIBLE_INSTALL_LIB_DIR})

# set(SORCES_DIR ${PROJECT_DIRECTORY}/src) ${PROJECT_DIRECTORY}/src/ArgumentParser
set(SOURCE_DIR ${PROJECT_DIRECTORY}/src/ExampleModule ${PROJECT_DIRECTORY}/src/Logging ${PROJECT_DIRECTORY}/src/ArgumentParser)
MESSAGE("SOURCE_DIR = " ${SOURCE_DIR})

include_directories(${DIVISIBLE_INSTALL_INC_DIR})
include_directories(${DIVISION_HEADERS_DIR})

add_subdirectory(src)
add_subdirectory(tests)

